--- a/index.html
+++ b/index.html
@@ -8776,7 +8776,7 @@ async function calculateAndDisplayStoreRanking() {
                 clearTimeout(versionClickTimer);
                 versionClickCount++;
                 if (versionClickCount === 10) {
-                    window.location.href = 'https://www.instagram.com/reel/DMD_sOiSXv7/?igsh=OGVhbnlxbjVsNnRv';
+                    window.location.href = 'https://www.youtube.com/watch?v=jBCRl7t8NeU';
                     versionClickCount = 0;
                 } else {
                     versionClickTimer = setTimeout(() => {
