--- a/index.html
+++ b/index.html
@@ -2354,6 +2354,7 @@
                     <a href="#" class="modal-btn collaborator-link" data-name="Beatriz">Beatriz</a>
                     <a href="#" class="modal-btn collaborator-link" data-name="Marcio">Marcio</a>
                     <a href="#" class="modal-btn collaborator-link" data-name="Eliseu">Eliseu</a>
+                    <a href="#" class="modal-btn collaborator-link" data-name="Wedson">Wedson</a>
                 </div>
             </div>
             <div id="colaborador-bacabal" class="modal-view" style="display: none;">
@@ -3409,7 +3410,7 @@ Transporte - R$ 5,00"></textarea></div>
             <script>
     // --- VERSÃO DO APLICATIVO ---
                 //2805
-    const APP_VERSION = '2.0.6'; // Altere este número para atualizar a versão
+    const APP_VERSION = '2.0.7'; // Altere este número para atualizar a versão
 
     const CASH_BOX_INITIAL_VALUE = 1000;
 
@@ -3443,11 +3444,11 @@ Transporte - R$ 5,00"></textarea></div>
     let countdownInterval = null; // Para controlar o timer da contagem regressiva
 
         // --- ESTADO DA APLICAÇÃO ---
-    const allCollaborators = ['Beatriz', 'Marcio', 'Eliseu', 'Natalia', 'Tacilio', 'Demilson', 'Leonardo'];
+    const allCollaborators = ['Beatriz', 'Marcio', 'Eliseu', 'Wedson', 'Natalia', 'Tacilio', 'Demilson', 'Leonardo'];
     const allUsers = [...allCollaborators]; // Lista unificada para funções genéricas
     const managers = ['Beatriz', 'Natalia'];
     const storeMapping = {
-        pinheiro: ['Beatriz', 'Marcio', 'Eliseu'],
+        pinheiro: ['Beatriz', 'Marcio', 'Eliseu', 'Wedson'],
         bacabal: ['Natalia', 'Tacilio', 'Demilson', 'Leonardo']
     };
     let currntUserName = ''; // Variável unificada para o usuário logado
