--- a/index.html
+++ b/index.html
@@ -2505,7 +2505,7 @@
                         <div class="tool-icon-wrapper"><i class="fa-solid fa-screwdriver-wrench"></i></div>
                         <span>Assistência Técnica (OS)</span>
                     </div>
-                    <div data-url="https://wa.me/553535732600?text=CNPJ%20PHO%2052524851000137%0ACNPJ%20BAC%2057269647000130" id="suporte-externo-link" class="tool-item" style="cursor: pointer;">
+                    <div data-url="https://web.whatsapp.com/send?phone=553535732600&text=CNPJ%20PHO%2052524851000137%0ACNPJ%20BAC%2057269647000130" id="suporte-externo-link" class="tool-item" style="cursor: pointer;">
                         <div class="tool-icon-wrapper"><i class="fa-solid fa-headset"></i></div>
                         <span>Suporte</span>
                     </div>
@@ -2813,7 +2813,7 @@
 
                 <button id="burn-cdc-btn" class="action-button full-width" style="margin-top: 1rem;"><i class="fa-solid fa-fire-flame-curved"></i> Queimar Verba CDC</button>
                 <button id="recover-cdc-btn" class="action-button full-width" style="margin-top: 0.5rem;"><i class="fa-solid fa-arrows-rotate"></i> Recuperar Verba CDC</button>
-                <div id="suporte-lideranca-btn" data-url="https://wa.me/5598991163598?text=Solicita%C3%A7%C3%A3o%20de%20Pre%C3%A7o%20especial%0A%0AMOTIVO%3A%20%0AENTRADA%20MT%3A%20%0AVENDEDOR%3A%20%0ALOJA%3A" class="action-button full-width" style="margin-top: 1rem; cursor:pointer;"><i class="fa-solid fa-headset"></i> Suporte Liderança</div>
+                <div id="suporte-lideranca-btn" data-url="https://web.whatsapp.com/send?phone=5598991163598&text=Solicita%C3%A7%C3%A3o%20de%20Pre%C3%A7o%20especial%0A%0AMOTIVO%3A%20%0AENTRADA%20MT%3A%20%0AVENDEDOR%3A%20%0ALOJA%3A" class="action-button full-width" style="margin-top: 1rem; cursor:pointer;"><i class="fa-solid fa-headset"></i> Suporte Liderança</div>
                 <div id="manager-daily-expenses-list" style="margin-top: 1rem;">
                     <!-- Gastos do dia serão listados aqui -->
                 </div>
@@ -3942,7 +3942,7 @@ Transporte - R$ 5,00"></textarea></div>
             <script>
     // --- VERSÃO DO APLICATIVO ---
                 //2805
-    const APP_VERSION = '3.0.9'; // Altere este número para atualizar a versão
+    const APP_VERSION = '3.1.0'; // Altere este número para atualizar a versão
 
     const CASH_BOX_INITIAL_VALUE = 1000;
     const SITE_CASH_BOX_INITIAL_VALUE = 5000;
