--- a/index.html
+++ b/index.html
@@ -3942,7 +3942,7 @@ Transporte - R$ 5,00"></textarea></div>
             <script>
     // --- VERSÃO DO APLICATIVO ---
                 //2805
-    const APP_VERSION = '3.1.0'; // Altere este número para atualizar a versão
+    const APP_VERSION = '3.1.1'; // Altere este número para atualizar a versão
 
     const CASH_BOX_INITIAL_VALUE = 1000;
     const SITE_CASH_BOX_INITIAL_VALUE = 5000;
@@ -9336,16 +9336,18 @@ async function calculateAndDisplayStoreRanking() {
 
             const openExternalLinkAndExit = (url) => {
                 if (!url) return;
-                const urlWithoutScheme = url.replace(/^https?:\/\//, '');
-                const chromeIntentUrl = `intent://${urlWithoutScheme}#Intent;scheme=https;package=com.android.chrome;end`;
-                window.location.href = chromeIntentUrl;
+
+                // window.open(url, '_blank') é a forma mais robusta de solicitar ao sistema
+                // para abrir uma URL em um novo contexto (geralmente o navegador padrão).
+                window.open(url, '_blank');
+                
+                // Mantemos a tentativa de fechar o app como um "melhor esforço",
+                // pois isso só funciona em ambientes de aplicativos híbridos (como Cordova).
                 setTimeout(() => {
                     if (navigator.app && navigator.app.exitApp) {
                         navigator.app.exitApp();
-                    } else {
-                        window.close();
                     }
-                }, 150);
+                }, 200); // Um pequeno delay para garantir que a nova aba seja aberta primeiro.
             };
 
             document.getElementById('hunter-card-link').addEventListener('click', function(event) {
