--- a/index.html
+++ b/index.html
@@ -3942,7 +3942,7 @@ Transporte - R$ 5,00"></textarea></div>
             <script>
     // --- VERSÃO DO APLICATIVO ---
                 //2805
-    const APP_VERSION = '3.1.2'; // Altere este número para atualizar a versão
+    const APP_VERSION = '3.1.3'; // Altere este número para atualizar a versão
 
     const CASH_BOX_INITIAL_VALUE = 1000;
     const SITE_CASH_BOX_INITIAL_VALUE = 5000;
@@ -9337,19 +9337,31 @@ async function calculateAndDisplayStoreRanking() {
             const openExternalLinkAndExit = (url) => {
                 if (!url) return;
 
-                // Esta é a mudança principal. Em vez de abrir uma nova aba,
-                // nós navegamos a janela atual para a URL externa.
-                // O sistema operacional interceptará isso e abrirá o navegador padrão.
-                window.location.href = url;
+                // Verifica se é um link do WhatsApp para aplicar a lógica especial
+                if (url.includes('whatsapp.com')) {
+                    // Remove o "https://"" do início da URL
+                    const urlWithoutScheme = url.replace(/^https?:\/\//, '');
 
-                // Mantemos a tentativa de fechar o app como um "melhor esforço".
-                // Em um ambiente de aplicativo híbrido, isso fechará o app depois de
-                // entregar o link para o navegador.
+                    // Cria um link de "Intent" do Android que aponta diretamente para o WhatsApp Business.
+                    // A parte mais importante é "package=com.whatsapp.w4b".
+                    // "S.browser_fallback_url" é um backup: se o WhatsApp Business não estiver instalado,
+                    // ele abrirá o link no navegador em vez de ir para a Play Store.
+                    const intentUrl = `intent://${urlWithoutScheme}#Intent;scheme=https;package=com.whatsapp.w4b;S.browser_fallback_url=${encodeURIComponent(url)};end`;
+
+                    // Navega para o link de Intent
+                    window.location.href = intentUrl;
+
+                } else {
+                    // Para outros links (como Brasil Card), o comportamento antigo é mantido
+                    window.location.href = url;
+                }
+
+                // Tenta fechar o aplicativo após um pequeno delay
                 setTimeout(() => {
                     if (navigator.app && navigator.app.exitApp) {
                         navigator.app.exitApp();
                     }
-                }, 500); // Aumentamos o delay para dar tempo ao navegador de abrir.
+                }, 500);
             };
 
             document.getElementById('hunter-card-link').addEventListener('click', function(event) {
