--- a/index.html
+++ b/index.html
@@ -3252,8 +3252,8 @@ P3: R$ 299,00"></textarea>
             <button id="close-suporte-modal-btn" class="modal-close-btn">×</button>
             <h3 class="modal-title">Contato do Suporte</h3>
             <div class="modal-button-container">
-                <a href="https://wa.me/553535732600?text=CNPJ%20PHO%2052524851000137%0ACNPJ%20BAC%2057269647000130" target="_blank" class="modal-btn">Brasil Card</a>
-                <a href="https://wa.me/5511963568037?text=CNPJ%20PHO%2052524851000137%0ACNPJ%20BAC%2057269647000130" target="_blank" class="modal-btn">Pay Mobi</a>
+                <a href="https://lojadohunter.wixsite.com/loja-do-hunter/cópia-pinheiro" target="_blank" class="modal-btn">Brasil Card</a>
+                <a href="https://lojadohunter.wixsite.com/loja-do-hunter/cópia-pinheiro" target="_blank" class="modal-btn">Pay Mobi</a>
                 <a href="tel:40201231" class="modal-btn">Credishop</a>
             </div>
         </div>
@@ -3942,7 +3942,7 @@ Transporte - R$ 5,00"></textarea></div>
             <script>
     // --- VERSÃO DO APLICATIVO ---
                 //2805
-    const APP_VERSION = '3.1.3'; // Altere este número para atualizar a versão
+    const APP_VERSION = '3.1.4'; // Altere este número para atualizar a versão
 
     const CASH_BOX_INITIAL_VALUE = 1000;
     const SITE_CASH_BOX_INITIAL_VALUE = 5000;
