--- a/index.html
+++ b/index.html
@@ -2505,7 +2505,7 @@
                         <div class="tool-icon-wrapper"><i class="fa-solid fa-screwdriver-wrench"></i></div>
                         <span>Assistência Técnica (OS)</span>
                     </div>
-                    <div data-url="https://web.whatsapp.com/send?phone=553535732600&text=CNPJ%20PHO%2052524851000137%0ACNPJ%20BAC%2057269647000130" id="suporte-externo-link" class="tool-item" style="cursor: pointer;">
+                    <div data-url="https://lojadohunter.wixsite.com/loja-do-hunter/cópia-pinheiro" id="suporte-externo-link" class="tool-item" style="cursor: pointer;">
                         <div class="tool-icon-wrapper"><i class="fa-solid fa-headset"></i></div>
                         <span>Suporte</span>
                     </div>
@@ -3942,7 +3942,7 @@ Transporte - R$ 5,00"></textarea></div>
             <script>
     // --- VERSÃO DO APLICATIVO ---
                 //2805
-    const APP_VERSION = '3.1.4'; // Altere este número para atualizar a versão
+    const APP_VERSION = '3.1.5'; // Altere este número para atualizar a versão
 
     const CASH_BOX_INITIAL_VALUE = 1000;
     const SITE_CASH_BOX_INITIAL_VALUE = 5000;
